# jaxcapse

./: LICENSE  README.md  generate_doc_plots.py  mkdocs.yml  pyproject.toml  stable  test  versions.json
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/api/: index.html
0.1.2/contributing/: index.html
0.1.2/usage_examples/: index.html
2025.09.13/: 404.html  index.html  sitemap.xml
2025.09.15/: 404.html  index.html  sitemap.xml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/contributing/: index.html
dev/search/: search_index.json
dev/stylesheets/: extra.css
dev/usage_examples/: index.html
docs/: api.md  contributing.md  index.md  usage_examples.md
docs/api/: jaxcapse.md  mlp.md  utils.md
docs/development/: changelog.md  contributing.md  testing.md
docs/examples/: basic.md  batch.md  data_management.md  gradients.md
docs/getting_started/: installation.md  quickstart.md  tutorial.md
docs/user_guide/: batch.md  computing.md  jax_features.md  loading.md  overview.md
jaxcapse/: __init__.py  data_fetcher.py  jaxcapse.py
notebooks/: jaxcapse_test.ipynb
stable/: 404.html  index.html  sitemap.xml
stable/api/: index.html
stable/contributing/: index.html
stable/usage_examples/: index.html
test-version/: 404.html  index.html  sitemap.xml
test-version/api/: index.html
test-version/contributing/: index.html
test-version/search/: search_index.json
tests/: README.md  fixtures.py  test_core_functionality.py  test_data_fetcher.py  test_data_fetcher_errors.py  test_data_fetcher_integration.py  test_edge_cases.py  test_emulator_integration.py  test_inference.py  test_init_coverage.py  test_jacobian_example.py  test_jax_features.py  test_utils.py
trained_emu/EE/: inminmax.npy  outminmax.npy  weights.npy
trained_emu/TE/: l.npy  (+3 more)
(+59 files in other folders)
