[tool.poetry]
name = "jaxcapse"
version = "0.1.0"
description = ""
authors = ["marcobonici <bonici.marco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flax = "^0.8.5"
jax = "^0.4.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
