[tool.poetry]
name = "jaxcapse"
version = "0.1.1"
description = ""
authors = ["marcobonici <bonici.marco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flax = "^0.10.0"
jax = "^0.4.30"
jaxace = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
